docs: add neovim Treesitter keybindings

--- a/docs/src/content/docs/keybindings/neovim.mdx
+++ b/docs/src/content/docs/keybindings/neovim.mdx
@@ -44,6 +44,48 @@ While not an exhaustive list, here are the most essential keybindings for my dai
 | ----------- | ------ | ------------------- |
 | `<Leader>t` | Normal | Toggle File Manager |
 
+## Treesitter
+
+### Select
+
+| Key  | Mode             | Description             |
+| ---- | ---------------- | ----------------------- |
+| `of` | Visual, Operator | Select outer function   |
+| `if` | Visual, Operator | Select inner function   |
+| `oc` | Visual, Operator | Select outer class      |
+| `ic` | Visual, Operator | Select inner class      |
+| `op` | Visual, Operator | Select outer parameter  |
+| `ip` | Visual, Operator | Select inner parameter  |
+| `ov` | Visual, Operator | Select outer assignment |
+| `iv` | Visual, Operator | Select inner assignment |
+| `S`  | Normal           | Interactive select      |
+
+### Swap
+
+| Key         | Mode   | Description                  |
+| ----------- | ------ | ---------------------------- |
+| `<Leader>a` | Normal | Swap with next parameter     |
+| `<Leader>A` | Normal | Swap with previous parameter |
+
+### Move
+
+| Key         | Mode                     | Description              |
+| ----------- | ------------------------ | ------------------------ |
+| `np`        | Normal, Visual, Operator | Next parameter start     |
+| `nP`        | Normal, Visual, Operator | Next parameter end       |
+| `pp`        | Normal, Visual, Operator | Previous parameter start |
+| `pP`        | Normal, Visual, Operator | Previous parameter end   |
+| `nf`        | Normal, Visual, Operator | Next function start      |
+| `nF`        | Normal, Visual, Operator | Next function end        |
+| `pf`        | Normal, Visual, Operator | Previous function start  |
+| `pF`        | Normal, Visual, Operator | Previous function end    |
+| `nc`        | Normal, Visual, Operator | Next class start         |
+| `nC`        | Normal, Visual, Operator | Next class end           |
+| `pc`        | Normal, Visual, Operator | Previous class start     |
+| `pC`        | Normal, Visual, Operator | Previous class end       |
+| `s`         | Normal, Visual           | Interactive move         |
+| `<Leader>c` | Normal                   | Jump upwards to context  |
+
 ## Edition
 
 ### Format
