docs:neovim: add rename tab keybinding

--- a/docs/src/content/docs/keybindings/neovim.mdx
+++ b/docs/src/content/docs/keybindings/neovim.mdx
@@ -216,11 +216,12 @@ While not an exhaustive list, here are the most essential keybindings for my dai
 
 ### Management
 
-| Key      | Mode   | Description     |
-| -------- | ------ | --------------- |
-| `<Tab>n` | Normal | New tab         |
-| `<Tab>q` | Normal | Close tab       |
-| `<Tab>w` | Normal | Save everything |
+| Key      | Mode   | Description        |
+| -------- | ------ | ------------------ |
+| `<Tab>n` | Normal | New tab            |
+| `<Tab>x` | Normal | Close tab          |
+| `<Tab>r` | Normal | Rename current tab |
+| `<Tab>w` | Normal | Save \*            |
 
 ## LSP
 
