docs: update manual installation to reflect new Makefile target

--- a/docs/src/content/docs/guides/installation.mdx
+++ b/docs/src/content/docs/guides/installation.mdx
@@ -65,13 +65,9 @@ you will need to provide your own preferences.
           ```sh
           make base
           ```
-      3. Install mise dependencies:
+      3. Install mise and neovim dependencies:
           ```sh
-          make mise
-          ```
-      4. Bootstrap Neovim:
-          ```sh
-          make neovim
+          make bootstrap
           ```
     </Steps>
   </TabItem>
