--- a/bin/install
+++ b/bin/install
@@ -639,7 +639,7 @@ base::rofi() {
     local -r ROFI_THEMES_DESTINATION_DIR="$XDG_DATA_HOME/rofi/themes"
     local -r ROFI_THEMES_REPOSITORY_BASENAME=$(basename $ROFI_THEMES_REPOSITORY .git)
 
-    if [[ ! -d "$ROFI_THEMES_DESTINATION_DIR" ]]; then
+    if [[ ! -d $ROFI_THEMES_DESTINATION_DIR ]]; then
 
         git clone --depth 1 --quiet "$ROFI_THEMES_REPOSITORY" "$SANDBOX/$ROFI_THEMES_REPOSITORY_BASENAME" || {
             log::error "Couldn't clone Rofi themes repository: $ROFI_THEMES_REPOSITORY"
@@ -1224,7 +1224,7 @@ main() {
     main::kube
 }
 
-if [[ "${BASH_SOURCE[0]}" == "$0" ]]; then
+if [[ ${BASH_SOURCE[0]} == "$0" ]]; then
     PKG_MANAGER=$(common::package_manager)
     main
 fi
