docs:neovim: update keybindings

--- a/docs/src/content/docs/keybindings/neovim.mdx
+++ b/docs/src/content/docs/keybindings/neovim.mdx
@@ -280,11 +280,17 @@ While not an exhaustive list, here are the most essential keybindings for my dai
 
 ### Integrations
 
-| Key           | Mode   | Description                    |
-| ------------- | ------ | ------------------------------ |
-| `<Leader>dgt` | Normal | Debug Go test under cursor     |
-| `<Leader>dpt` | Normal | Debug Python test under cursor |
-| `<Leader>dpc` | Normal | Debug Python class             |
+| Key           | Mode   | Description                            |
+| ------------- | ------ | -------------------------------------- |
+| `<Leader>tnd` | Normal | Run nearest test with DAP integration  |
+| `<Leader>tfd` | Normal | Run \* file tests with DAP integration |
+| `<Leader>tn`  | Normal | Run nearest test                       |
+| `<Leader>tf`  | Normal | Run \* file tests                      |
+| `<Leader>tf`  | Normal | Run \* directory tests                 |
+| `<Leader>ts`  | Normal | Show summary                           |
+| `<Leader>to`  | Normal | Show output                            |
+| `<Leader>top` | Normal | Show output panel                      |
+| `<Leader>tw`  | Normal | Rerun test on file changes             |
 
 ## Markdown
 
@@ -351,12 +357,12 @@ While not an exhaustive list, here are the most essential keybindings for my dai
 
 ## Miscellaneous
 
-| Key          | Mode   | Description       |
-| ------------ | ------ | ----------------- |
-| `<Leader>tw` | Normal | Toggle focus mode |
-| `<Ctrl-a>`   | Normal | Increment version |
-| `<Ctrl-x>`   | Normal | Decrement version |
-| `jq`         | Normal | Jq/Yq quickfix    |
-| `jqq`        | Normal | Jq/Yq query       |
+| Key         | Mode   | Description       |
+| ----------- | ------ | ----------------- |
+| `<Leader>z` | Normal | Toggle focus mode |
+| `<Ctrl-a>`  | Normal | Increment version |
+| `<Ctrl-x>`  | Normal | Decrement version |
+| `jq`        | Normal | Jq/Yq quickfix    |
+| `jqq`       | Normal | Jq/Yq query       |
 
 </div>
